--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.49.8",
     "@vercel/analytics": "^1.4.1",
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
