--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.49.8",
     "@vercel/analytics": "^1.4.1",
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
@@ -31,6 +30,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.1",
     "postcss": "^8",
+    "prisma": "^6.8.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
