--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Run Biome check
+        run: npx biome check || true
+
       - name: Vercel Deploy
         uses: nexterias/actions-vercel@v1
         with:
