--- a/biome.json
+++ b/biome.json
@@ -1,12 +1,19 @@
 {
-	"$schema": "https://biomejs.dev/schemas/2.2.4/schema.json",
+	"$schema": "https://biomejs.dev/schemas/2.0.5/schema.json",
 	"vcs": {
 		"enabled": false,
 		"clientKind": "git",
 		"useIgnoreFile": false
 	},
 	"files": {
-		"ignoreUnknown": false
+		"ignoreUnknown": true,
+		"includes": ["**/*.ts", "**/*.tsx", "**/*.js", "**/*.jsx"],
+		"experimentalScannerIgnores": [
+			".next/**",
+			"node_modules/**",
+			"public/**",
+			"test/**"
+		]
 	},
 	"formatter": {
 		"enabled": true,
