もうci/cdで難しいことやらない

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,6 @@ jobs:
           token: ${{ secrets.VERCEL_TOKEN }}
           org-id: ${{ secrets.VERCEL_ORG_ID }}
           project-id: ${{ secrets.VERCEL_PROJECT_ID }}
-          working-directory: .
-          prod: true
-
-
+          cwd: .               # working-directory の代わり
+          production: true     # prod の代わり
+          github-token: ${{ secrets.GITHUB_TOKEN }} # 推奨
