--- a/package.json
+++ b/package.json
@@ -1,42 +1,43 @@
 {
-	"name": "next-app",
-	"version": "0.1.0",
-	"private": true,
-	"scripts": {
-		"dev": "next dev",
-		"build": "next build",
-		"start": "next start -p 8000",
-		"lint": "biome check",
-		"format": "biome format --write"
-	},
-	"dependencies": {
-		"@supabase/supabase-js": "^2.49.8",
-		"@vercel/analytics": "^1.4.1",
-		"axios": "^1.7.9",
-		"dotenv": "^16.4.7",
-		"driver.js": "^1.3.6",
-		"i18next": "^24.2.0",
-		"i18next-browser-languagedetector": "^8.0.2",
-		"i18next-http-backend": "^3.0.1",
-		"next": "^15.1.3",
-		"next-sitemap": "^4.2.3",
-		"react": "^19.0.0",
-		"react-dom": "^19.0.0",
-		"react-i18next": "^15.2.0",
-		"styled-components": "^6.1.13"
-	},
-	"devDependencies": {
-		"@biomejs/biome": "^2.0.5",
-		"@eslint/eslintrc": "^3",
-		"@types/node": "^20",
-		"@types/react": "^19",
-		"@types/react-dom": "^19",
-		"eslint-config-next": "15.1.1",
-		"husky": "^9.1.7",
-		"lint-staged": "^16.2.1",
-		"postcss": "^8",
-		"prisma": "^6.8.2",
-		"tailwindcss": "^3.4.1",
-		"typescript": "^5"
-	}
+  "name": "next-app",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start -p 8000",
+    "lint": "biome check",
+    "format": "biome format --write",
+    "prepare": "husky install"
+  },
+  "dependencies": {
+    "@supabase/supabase-js": "^2.49.8",
+    "@vercel/analytics": "^1.4.1",
+    "axios": "^1.7.9",
+    "dotenv": "^16.4.7",
+    "driver.js": "^1.3.6",
+    "i18next": "^24.2.0",
+    "i18next-browser-languagedetector": "^8.0.2",
+    "i18next-http-backend": "^3.0.1",
+    "next": "^15.1.3",
+    "next-sitemap": "^4.2.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-i18next": "^15.2.0",
+    "styled-components": "^6.1.13"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "^2.0.5",
+    "@eslint/eslintrc": "^3",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "eslint-config-next": "15.1.1",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.1",
+    "postcss": "^8",
+    "prisma": "^6.8.2",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
+  }
 }
