--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 9000",
     "build": "next build",
-    "start": "next start -p 8000",
+    "start": "next start",
     "lint": "biome check",
     "format": "biome format --write",
     "prepare": "husky install"
